GNOME Bugzilla – Bug 765904
deviceproviderfactory: fix factory leak
Last modified: 2016-05-03 07:50:42 UTC
.
Created attachment 327153 [details] [review] deviceproviderfactory: fix factory leak The code path when early returning was leaking the extra reference on the factory.
Attachment 327153 [details] pushed as 782bc97 - deviceproviderfactory: fix factory leak